# mcp-credentials-vault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  mcp-server.toml
docs/: api-reference.md  backends.md  security-model.md
src/: adk_platform.rs  adk_vault.rs  aws.rs  azure.rs  backend.rs  error.rs  gcp.rs  hashicorp.rs  lib.rs  main.rs  server.rs  types.rs
