[package]
name = "mcp-credentials-vault"
version = "1.0.0"
edition = "2024"
authors = ["James Karanja Maina <james.karanja@zavora.ai>"]
license = "Apache-2.0"
description = "Credentials Vault MCP server for ADK-Rust Enterprise — scoped, auditable credential access with pluggable vault backends"
repository = "https://github.com/zavora-ai/mcp-credentials-vault"
homepage = "https://enterprise.adk-rust.com"
documentation = "https://docs.rs/mcp-credentials-vault"
keywords = ["mcp", "credentials", "vault", "secrets", "enterprise"]
categories = ["development-tools", "authentication"]
rust-version = "1.85"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["adk-vault"]
hashicorp = ["dep:reqwest"]
aws = ["dep:aws-sdk-secretsmanager", "dep:aws-config"]
gcp = ["dep:reqwest", "dep:gcp_auth"]
azure = ["dep:reqwest"]
adk-vault = []
adk-platform = ["dep:reqwest"]
all-backends = ["hashicorp", "aws", "gcp", "azure", "adk-vault", "adk-platform"]

[dependencies]
adk-mcp-sdk = { version = "0.1.0", path = "../adk-mcp-sdk" }
rmcp = { version = "1.7", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
schemars = "1"
base64 = "0.22"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# HashiCorp Vault + GCP + Azure (HTTP-based)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# GCP Secret Manager
gcp_auth = { version = "0.12", optional = true }

# AWS Secrets Manager
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.24"
wiremock = "0.6"
